fixing JWT errors